--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 		    </p>
 
 		    <p style="text-align: justify">
-			I am a research engineer at Huawei Technologies
-		      Research at Huawei Noah's Ark Lab working with robotics, I hope I can contribute to the field of robotics.
+			I am a research engineer at Huawei Noah's Ark Lab working with robotics, I hope I can contribute a little to the field of robotics.
 		    </p>
 
 		    <!-- </div> -->
